Add registration with code and add users to db

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -5,9 +5,9 @@
     <form action="" method="post">
         {{ form.hidden_tag() }}
         <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}<br>
-            {% for error in form.username.errors %}
+            {{ form.verification_code.label }}<br>
+            {{ form.verification_code(size=32) }}<br>
+            {% for error in form.verification_code.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
