--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,20 +2,21 @@
 <html>
     <head>
         {% if title %}
-        <title>{{ title }} - microblog</title>
+        <title>{{ title }} - LMS</title>
         {% else %}
-        <title>microblog</title>
+        <title>LMS</title>
         {% endif %}
     </head>
     <body>
           <div>
-      Microblog:
+      LMS:
       <a href="{{ url_for('index') }}">Home</a>
       {% if current_user.is_anonymous %}
       <a href="{{ url_for('login') }}">Login</a>
       {% else %}
-      <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
+      <a href="{{ url_for('user', email=current_user.email) }}">Profile</a>
       <a href="{{ url_for('logout') }}">Logout</a>
+      <a href="{{ url_for('add_user') }}">Add user</a>
       {% endif %}
     </div>
         <hr>
