--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,8 @@
       <a href="{{ url_for('user', email=current_user.email) }}">Profile</a>
       <a href="{{ url_for('logout') }}">Logout</a>
       <a href="{{ url_for('add_user') }}">Add user</a>
+      <a href="{{ url_for('add_group') }}">Add group</a>
+      <a href="{{ url_for('add_course') }}">Add course</a>
       {% endif %}
     </div>
         <hr>
