--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Hi, {{ current_user.email }}!</h1>
+    <h1>User: {{ current_user.email }}!</h1>
 {% endblock %}
